# weevils-python

./: .coveragerc  .drone.yml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  upload.sh
tests/: conftest.py  test_client.py  test_hosts.py  test_placeholder.py  test_repos.py  test_weevils.py  utils.py
tests/cassettes/: tests.test_client.test_fetching_hosts.json  tests.test_client.test_get_repository.json  tests.test_client.test_host_shortcuts.json  tests.test_client.test_list_weevils.json  tests.test_client.test_run_weevil.json  tests.test_hosts.test_fetching_hosts.json  tests.test_hosts.test_host_shortcuts.json  tests.test_repos.test_get_repository.json  tests.test_weevils.test_create_and_run_weevil.json  tests.test_weevils.test_list_weevils.json  tests.test_weevils.test_run_weevil.json  tests.test_weevils.test_unique_names.json
weevils/: __init__.py  client.py  client_base.py  dtos.py  exceptions.py  models.py
weevils/clients/: _client_base.py  _utils.py  account.py  accounts.py  base_image.py  host.py  host_app.py  job.py  jobs.py  repo.py  weevils.py
weevils/clients/tests/: test_utils.py
weevils/v1/: client.py  exceptions.py
