[tool.poetry]
name = "weevils"
version = "0.0.2alpha"
license = "GPLv3"
authors = ["weevils.io <code@weevils.io>"]
homepage = "https://docs.weevils.io/api-client"
description = ""
packages = [{ include = "weevils/"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"
betamax = "~0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
