[tool.poetry]
name = "weevils"
version = "0.1"
license = "GPLv3"
authors = ["weevils.io <code@weevils.io>"]
homepage = "https://docs.weevils.io/api-client"
description = ""
readme = "README.md"
packages = [{ include = "weevils/"}]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"
betamax = "~0.8"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
